Add technologies library on sidebar and update target open link to blank

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site Settings
 title: Danny Dwi Krestianto
-url: 'http://webjeda.com'
+url: 'https://dannyosama.github.io/Digital-Resume/'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
