--- a/_data/data.yml
+++ b/_data/data.yml
@@ -54,6 +54,21 @@ sidebar:
         - item: Traveling
           link:
 
+    technologies:
+      title: Technologies
+      info:
+        - item: Cypress
+          link: https://www.cypress.io/
+          
+        - item: Cucumber
+          link: https://cucumber.io/
+
+        - item: JMeter
+          link: https://jmeter.apache.org/
+
+        - item: Taurus
+          link: https://gettaurus.org/
+
 career-profile:
     title: Career Profile
     summary: |
@@ -265,7 +280,7 @@ skills:
       - name: Sketch & Photoshop
         level: 75%
 
-      - name: Automation test
+      - name: Automation
         level: 55%
 
       - name: Communication
