--- a/_data/data.yml
+++ b/_data/data.yml
@@ -122,7 +122,7 @@ experiences:
         company: TreeDots, Singapore (Remote)
         details: |
           As a company based for supplies to offload unsold food and beverage inventory at discounted prices,
-          My role as a QA to manage multiple projects from B2B, B2C and Logistic.
+          my role as a QA to manage multiple projects from B2B, B2C and Logistic.
           Manage QA task and deliver the task to respective QA Member.
           Creating documentation of testing, test ticket as daily basis.
             - Create QA documentation such as Test case, Planning etc.
@@ -132,7 +132,7 @@ experiences:
         time: 2020 - 2021
         company: Niagahoster Indonesia, Yogyakarta (Remote)
         details: |
-          As a SaaS company, giving service of hosting the web for customers,
+          As a SaaS company, giving services of hosting the web for customers,
           My role as a QA is to ensure the stability of the Niagahoster host,
           and also test for the security of the host. Also in my tenure I manage the QA team members.
             - Manage manual and automation test.
@@ -143,7 +143,7 @@ experiences:
         time: 2017 - 2020
         company: Labster, Bali
         details: |
-          As a education company, my role as a QA is to ensure the quality of the content of the simulation.
+          As an education company, my role as a QA is to ensure the quality of the content of the simulation.
           I also QA for the builder platform to endure the content developer can have stability to create the simulation.
           And as maintenance QA who gets tickets directly to be investigated. 
             - Manage 10 or more members to test Migration testing.
@@ -154,7 +154,7 @@ experiences:
         time: 2015 - 2017
         company: Ogilvy, Bali
         details: |
-          As a advertisement company, my role as a QA is to ensure the quality of the content of the product.
+          As an advertisement company, my role as a QA is to ensure the quality of the content of the product.
           Various testing are done from various platform from desktop to devices.
             - Handle various testing from Web, Banner, and eDM.
             - Create test documentations. Also handle content entry and user manual guide documentation for client.
@@ -165,8 +165,9 @@ experiences:
         time: 2011 - 2015
         company: Gameloft, Yogyakarta
         details: |
-          As a game company, my role as a QA is to ensure the quality of the product.
-          Various testing are done from various platform from desktop to devices. From gameplay test to localisation test.
+          As a game company, my role as a QA is to ensure the quality of the game.
+          Various testing are done from various platform from desktop to devices. 
+          From gameplay test to localisation test.
             - Handle South East Asia request for testing purpose.
             - Experience as a Lead Supervisors QA. Leading 12 members in charge for various testing.
             - Manage 30-50 members to Massive performance and/or compatibility testing.
