--- a/_data/data.yml
+++ b/_data/data.yml
@@ -28,7 +28,7 @@ sidebar:
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: https://drive.google.com/file/d/1_Z88nj4vZA2WcP9nZ4uAGYEt2mMHCnSF/view?usp=drive_link
+    pdf: https://drive.google.com/file/d/1PsuxDVl5Nu1NWLgpYL81WOt2F-jR7Wrm/view?usp=sharing
 
     languages:
       title: Languages
