Update work task on 42 and labster

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -121,7 +121,7 @@ experiences:
             - Manage content entry and develop user manual guides for clients.
             - Review design mockups and create user flows based on the design.
             - Oversee automation testing processes.
-            - Manage testing for web and mobile applications on both iOS and Android devices.
+            - Manage testing for web and mobile applications on both iOS, Android, and VR devices.
             - Conduct compatibility testing to ensure optimal performance across different platforms.
             - As a Co-Project Manager, handling multiple projects and documentation.
             - As a Business Analyst, conducting project analyses for clients.
@@ -151,7 +151,7 @@ experiences:
           As an education company, my role as a QA is to ensure the quality and accuracy of simulation content. I also perform QA for the builder platform to ensure stability, allowing content developers to create simulations seamlessly. Additionally, I handle maintenance QA, investigating tickets directly to identify and resolve issues.
             - Manage a team of 10 or more members for migration testing.
             - Create and maintain test documentation.
-            - Manage testing for web and mobile applications on both iOS and Android devices.
+            - Manage testing for web and mobile applications on both iOS, Android, and VR devices.
             - Conduct compatibility testing to ensure optimal performance across different platforms.
             - As PIC for Maintenance, collaborating with the Customer Success team to resolve client issues.
             - Work within an Agile SCRUM framework.
