Upload and update photo

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -10,7 +10,7 @@ sidebar:
     # Profile information
     name: Danny Dwi Krestianto
     tagline: Quality Assurance
-    avatar: profile_edit.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: Danny 100x100.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: dannyo_sama@yahoo.co.id
